{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 54,
  "lineage": "fa530a96-1e6a-bf4d-04ab-08cd791f9694",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_nat_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f64887ca15c77f75",
            "arn": "arn:aws:ec2:ap-southeast-2:933295360423:elastic-ip/eipalloc-0f64887ca15c77f75",
            "domain": "vpc",
            "id": "eipalloc-0f64887ca15c77f75",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-52-62-149-44.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.62.149.44",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elastic_ip_nat_2a"
            },
            "tags_all": {
              "Name": "elastic_ip_nat_2a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_nat_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055176f476cd485e3",
            "arn": "arn:aws:ec2:ap-southeast-2:933295360423:elastic-ip/eipalloc-055176f476cd485e3",
            "domain": "vpc",
            "id": "eipalloc-055176f476cd485e3",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-13-55-184-137.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.55.184.137",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elastic_ip_nat_2b"
            },
            "tags_all": {
              "Name": "elastic_ip_nat_2b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-076fe60835f136dc9",
            "arn": "arn:aws:ec2:ap-southeast-2:933295360423:instance/i-08106d3bf1da92d7e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08106d3bf1da92d7e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0056624444b91e2ff",
            "private_dns": "ip-10-0-0-14.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.14",
            "public_ip": "3.104.77.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01bd51d820f74ffce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08def585a64e01a8a",
            "tags": {
              "Environment": "dev",
              "Name": "k8s_master_node"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "k8s_master_node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b93754ceb0fa298a"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet_public_2a",
            "aws_vpc.sme_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "workers_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-076fe60835f136dc9",
            "arn": "arn:aws:ec2:ap-southeast-2:933295360423:instance/i-0638ac4a08fb70989",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0638ac4a08fb70989",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05715b286b2d3c329",
            "private_dns": "ip-10-0-0-15.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.15",
            "public_ip": "54.252.143.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03542f66baef45299",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08def585a64e01a8a",
            "tags": {
              "Environment": "dev",
              "Name": "k8s_worker_node_0"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "k8s_worker_node_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b93754ceb0fa298a"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet_public_2a",
            "aws_vpc.sme_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-076fe60835f136dc9",
            "arn": "arn:aws:ec2:ap-southeast-2:933295360423:instance/i-0908daa21e3dc019d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0908daa21e3dc019d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ba3c0ab147a9f35c",
            "private_dns": "ip-10-0-0-9.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.9",
            "public_ip": "3.27.217.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0823a64a55b4b69c5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08def585a64e01a8a",
            "tags": {
              "Environment": "dev",
              "Name": "k8s_worker_node_1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "k8s_worker_node_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b93754ceb0fa298a"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet_public_2a",
            "aws_vpc.sme_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:933295360423:internet-gateway/igw-0b9c35fc68e2a4dc0",
            "id": "igw-0b9c35fc68e2a4dc0",
            "owner_id": "933295360423",
            "tags": {
              "Environment": "Dev",
              "Name": "IGW"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "IGW"
            },
            "vpc_id": "vpc-0f9f3936a7cc37aab"
          },
          "dependencies": [
            "aws_vpc.sme_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f64887ca15c77f75",
            "association_id": "eipassoc-0354ac557dabd961f",
            "connectivity_type": "public",
            "id": "nat-084fa84887ca9efb1",
            "network_interface_id": "eni-08edc4a1818a7cac2",
            "private_ip": "10.0.0.82",
            "public_ip": "52.62.149.44",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d9d8e627564926f0",
            "tags": {
              "Environment": "Dev",
              "Name": "nat_2a"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "nat_2a"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip_nat_2a",
            "aws_internet_gateway.IGW",
            "aws_subnet.subnet_private_2a",
            "aws_vpc.sme_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055176f476cd485e3",
            "association_id": "eipassoc-0e1e7eff077661c79",
            "connectivity_type": "public",
            "id": "nat-06c469ff1de9aaaa9",
            "network_interface_id": "eni-0039c1b3c3c898cc9",
            "private_ip": "10.0.0.223",
            "public_ip": "13.55.184.137",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-056c5e1f66cbfe7a3",
            "tags": {
              "Environment": "Dev",
              "Name": "nat_2b"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "nat_2b"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip_nat_2b",
            "aws_internet_gateway.IGW",
            "aws_subnet.subnet_private_2b",
            "aws_vpc.sme_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:933295360423:route-table/rtb-0643e57bdde625090",
            "id": "rtb-0643e57bdde625090",
            "owner_id": "933295360423",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9c35fc68e2a4dc0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "rtb_igw"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "rtb_igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9f3936a7cc37aab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.sme_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:933295360423:route-table/rtb-0e56878a7bd293922",
            "id": "rtb-0e56878a7bd293922",
            "owner_id": "933295360423",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Dev",
              "Name": "rtb_nat"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "rtb_nat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9f3936a7cc37aab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sme_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_association_igw_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a07e1fc1be9ac0d",
            "route_table_id": "rtb-0643e57bdde625090",
            "subnet_id": "subnet-08def585a64e01a8a"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.rtb_igw",
            "aws_subnet.subnet_public_2a",
            "aws_vpc.sme_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_association_igw_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bc9388a5e4a365e",
            "route_table_id": "rtb-0643e57bdde625090",
            "subnet_id": "subnet-0a8ef3ea382388085"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.rtb_igw",
            "aws_subnet.subnet_public_2b",
            "aws_vpc.sme_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_association_nat_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0304a7954203b3979",
            "route_table_id": "rtb-0e56878a7bd293922",
            "subnet_id": "subnet-0d9d8e627564926f0"
          },
          "dependencies": [
            "aws_route_table.rtb_nat",
            "aws_subnet.subnet_private_2a",
            "aws_vpc.sme_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_association_nat_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0500508e00ed6ba33",
            "route_table_id": "rtb-0e56878a7bd293922",
            "subnet_id": "subnet-056c5e1f66cbfe7a3"
          },
          "dependencies": [
            "aws_route_table.rtb_nat",
            "aws_subnet.subnet_private_2b",
            "aws_vpc.sme_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:933295360423:subnet/subnet-0d9d8e627564926f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9d8e627564926f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "933295360423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "subnet_private_2a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "subnet_private_2a"
            },
            "vpc_id": "vpc-0f9f3936a7cc37aab"
          },
          "dependencies": [
            "aws_vpc.sme_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:933295360423:subnet/subnet-056c5e1f66cbfe7a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056c5e1f66cbfe7a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "933295360423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "subnet_private_2b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "subnet_private_2b"
            },
            "vpc_id": "vpc-0f9f3936a7cc37aab"
          },
          "dependencies": [
            "aws_vpc.sme_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:933295360423:subnet/subnet-08def585a64e01a8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08def585a64e01a8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "933295360423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "subnet_public_2a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "subnet_public_2a"
            },
            "vpc_id": "vpc-0f9f3936a7cc37aab"
          },
          "dependencies": [
            "aws_vpc.sme_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:933295360423:subnet/subnet-0a8ef3ea382388085",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8ef3ea382388085",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "933295360423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "subnet_public_2b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "subnet_public_2b"
            },
            "vpc_id": "vpc-0f9f3936a7cc37aab"
          },
          "dependencies": [
            "aws_vpc.sme_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sme_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:933295360423:vpc/vpc-0f9f3936a7cc37aab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-02d050b0c1c451951",
            "default_route_table_id": "rtb-0cd8b7d7cddaa5833",
            "default_security_group_id": "sg-0b93754ceb0fa298a",
            "dhcp_options_id": "dopt-0413df28607b9f5c5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f9f3936a7cc37aab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cd8b7d7cddaa5833",
            "owner_id": "933295360423",
            "tags": {
              "Name": "sme_vpc"
            },
            "tags_all": {
              "Name": "sme_vpc"
            }
          }
        }
      ]
    }
  ]
}